[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/backgrounds/clouds/clouds_0_larger.png" type="Texture" id=1]
[ext_resource path="res://assets/images/backgrounds/mountains/mountain_0_larger.png" type="Texture" id=2]
[ext_resource path="res://src/ships/scenes/JB_001/JB_001.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/player/scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://game_modes/quick_game/scripts/quick_game.gd" type="Script" id=5]
[ext_resource path="res://assets/images/backgrounds/clouds/clouds_1.png" type="Texture" id=6]
[ext_resource path="res://game_modes/quick_game/scenes/SpawnPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/sfx/wind.wav" type="AudioStream" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends ParallaxLayer

export (int) var speed = 60

func _process(delta):
	motion_offset.x -= speed * delta
"

[sub_resource type="GDScript" id=2]
script/source = "extends ParallaxLayer

export (int) var speed = 60

func _process(delta):
	motion_offset.x -= speed * delta
"

[sub_resource type="GDScript" id=3]
script/source = "extends ParallaxLayer

export (int) var speed = 60

func _process(delta):
	motion_offset.x -= speed * delta
"

[node name="QuickGame" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 48.0 ]
}

[node name="SpawnPoint_1" parent="." instance=ExtResource( 7 )]
position = Vector2( -60, 388 )

[node name="SpawnPoint_2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1090, 378 )

[node name="SpawnPoint_3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1090, -6 )

[node name="SpawnPoint_4" parent="." instance=ExtResource( 7 )]
position = Vector2( -62, -6 )

[node name="SpawnPoint_5" parent="." instance=ExtResource( 7 )]
position = Vector2( -62, -390 )

[node name="SpawnPoint_6" parent="." instance=ExtResource( 7 )]
position = Vector2( 1090, -390 )

[node name="SpawnPoint_7" parent="." instance=ExtResource( 7 )]
position = Vector2( 1082, -822 )

[node name="SpawnPoint_8" parent="." instance=ExtResource( 7 )]
position = Vector2( -62, -830 )

[node name="WaveDelay" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
one_shot = true

[node name="SpawnRate" type="Timer" parent="."]
process_mode = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="FarClouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0.15 )
motion_mirroring = Vector2( 1026, 600 )
script = SubResource( 1 )
speed = 38

[node name="Sprite" type="Sprite" parent="ParallaxBackground/FarClouds"]
position = Vector2( 0, -304 )
texture = ExtResource( 1 )
centered = false

[node name="Mountains" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0.2 )
motion_mirroring = Vector2( 1026, 0 )
script = SubResource( 2 )
speed = 50

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Mountains"]
texture = ExtResource( 2 )
centered = false

[node name="Clouds1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0.5 )
motion_mirroring = Vector2( 1026, 600 )
script = SubResource( 3 )
speed = 125

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Clouds1"]
modulate = Color( 1, 1, 1, 0.368627 )
texture = ExtResource( 6 )
centered = false

[node name="Clouds2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0.85 )
motion_mirroring = Vector2( 1026, 600 )
script = SubResource( 3 )
speed = 213

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Clouds2"]
modulate = Color( 1, 1, 1, 0.368627 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 1

[node name="Clouds3" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 1026, 600 )
script = SubResource( 3 )
speed = 250

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/Clouds3"]
modulate = Color( 1, 1, 1, 0.223529 )
texture = ExtResource( 6 )
centered = false

[node name="JB_001" parent="." instance=ExtResource( 3 )]
position = Vector2( 536, 312 )
speed = 85
max_health = 2500

[node name="Camera2D" parent="JB_001" index="0"]
limit_top = -1080
limit_right = 1026
limit_bottom = 600

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 547.59, 313.073 )
collision_mask = 417
jump_strength = 250

[node name="Camera2D" parent="Player" index="2"]
limit_left = 0
limit_top = -1080
limit_right = 1026
limit_bottom = 600

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." groups=[
"sfx",
]]
stream = ExtResource( 8 )
volume_db = 1.0
autoplay = true
bus = "World"

[connection signal="timeout" from="WaveDelay" to="." method="_on_WaveDelay_timeout"]
[connection signal="timeout" from="SpawnRate" to="." method="_on_SpawnRate_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]

[editable path="JB_001"]
[editable path="JB_001/MinorTurret"]
[editable path="JB_001/MinorTurret/InteractableMonitor"]
[editable path="JB_001/MinorTurret2"]
[editable path="JB_001/MinorTurret2/InteractableMonitor"]
[editable path="JB_001/interiors/computer"]
[editable path="JB_001/interiors/computer/InteractableMonitor"]
[editable path="Player"]
